--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world!</h2>
 <h2>This is the first line</h2>
+  <h2>This is the second line</h2>
 </body>
 </html>
