--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <h2 ALIGN=CENTER>Hello world!</h2>
 <h2>This is the first line</h2>
   <h2>This is the second line</h2>
+  <h2>This is the 3rd line</h2>
 </body>
 </html>
